# pyrun_injected

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yml
examples/: run_00.py  run_01.py  run_02.py  run_data.py  run_files.py  run_string.py
pyrun_injected/: __init__.py  _win32utils.py  _winapi.py  dllinject.py  pyrun_injected.c
