[project]
name = "pyrun_injected"
description = "python injector and script runner"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "monkeyman192"}
]
maintainers = [
  {name = "monkeyman192"}
]
version = "0.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "pyrun_injected.dll", sources = ["pyrun_injected/pyrun_injected.c"], export-symbols = ["run_file", "run_multifile", "run_string", "run_multistring"]}
]
