[project]
name = "pyrun_injected"
description = "python injector and script runner"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "monkeyman192"}
]
maintainers = [
  {name = "monkeyman192"}
]
dependencies = [
  "pymem"
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "twine",
  "setuptools_scm"
]

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8", "setuptools_scm_git_semver"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "pyrun_injected.dll", sources = ["pyrun_injected/pyrun_injected.c"], export-symbols = ["run_file", "run_string", "run_data"]}
]

[tool.setuptools.package-dir]
pyrun_injected = "pyrun_injected"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
